ADD catalog filter + pricing algorithm + FIX modal bug and backdrops

--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -40,8 +40,8 @@
                 </div>
                 <div class="flex justify-end align-middle">
                     <div class="flex place-content-start items-baseline mb-5">
-                    <span class="text-2xl font-bold text-gray-900 mr-1">{{ 'CARD._from' | translate }} {{getPrice().price}}</span>
-                    <span class="text-xs font-bold text-gray-900">{{getPrice().priceType}}</span>
+                    <span class="text-2xl font-bold text-gray-900 mr-1">{{ 'CARD._from' | translate }} {{getPrice().price}} {{getPrice().unit}}</span>
+                    <span class="text-xs font-bold text-gray-900">{{getPrice().text}}</span>
                     </div>
                 </div>
             </div>
