--- a/src/app/shared/cart-drawer/cart-drawer.component.html
+++ b/src/app/shared/cart-drawer/cart-drawer.component.html
@@ -1,19 +1,19 @@
 
 <!-- drawer component -->
-<div id="cart-drawer" class="fixed top-0 right-0 z-40 h-screen p-4 overflow-y-auto transition-transform translate-x-full bg-white w-1/3 dark:bg-gray-800" tabindex="-1" aria-labelledby="cart-drawer-label" aria-hidden="true">
+<div id="cart-drawer" (click)="$event.stopPropagation();"  class="h-full" tabindex="-1" aria-labelledby="cart-drawer-label" aria-hidden="true">
    <fa-icon class="mr-2 text-gray-500 dark:text-gray-400" [icon]="faCartShopping"></fa-icon>
    <h3 id="cart-drawer-label" class="inline-flex items-center text-base font-semibold text-gray-500 dark:text-gray-400 text-xl" aria-hidden="true">
       {{ 'CART_DRAWER._title' | translate }}
    </h3>
    <hr class="h-px my-2 bg-gray-200 border-0 dark:bg-gray-700">
-   <button type="button" data-drawer-hide="cart-drawer" aria-controls="cart-drawer" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 absolute top-2.5 end-2.5 inline-flex items-center justify-center dark:hover:bg-gray-600 dark:hover:text-white" >
+   <button (click)="hideCart()" type="button" aria-controls="cart-drawer" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 absolute top-2.5 end-2.5 inline-flex items-center justify-center dark:hover:bg-gray-600 dark:hover:text-white" >
       <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
       </svg>
       <span class="sr-only">{{ 'CART_DRAWER._close' | translate }}</span>
    </button>
 
-   <div class="h-3/4 grid grid-flow-row auto-rows-max overflow-y-auto p-2">
+   <div class="h-3/4 grid grid-flow-row auto-rows-max overflow-y-auto  p-2">
       @for (item of items; track item) {
             <div class="flex justify-between w-full mt-2 mb-2 rounded-lg bg-secondary-50/95 dark:bg-gray-700 dark:border-gray-800 border-secondary-50 border">
                <button type="button" (click)="deleteProduct(item)" class="flex p-2 box-decoration-clone">
@@ -29,8 +29,8 @@
                <div class="p-2 flex items-center">
                   @if (item.productOfferingPrice) {
                      <div class="flex place-content-center flex-col">
-                        <span class="text-3xl font-bold text-gray-900 dark:text-primary-50 mr-3">{{getPrice(item.productOfferingPrice).price}}</span>
-                        <span class="text-xs dark:text-primary-50">{{getPrice(item.productOfferingPrice).priceType}}</span>
+                        <span class="text-3xl font-bold text-gray-900 dark:text-primary-50 mr-3">{{getPrice(item).price}} {{getPrice(item).unit}}</span>
+                        <span class="text-xs dark:text-primary-50">{{getPrice(item).text}}</span>
                       </div>
                   }
                </div>
@@ -53,7 +53,7 @@
       <hr class="h-px my-2 bg-gray-200 border-0 dark:bg-gray-700">
          <div class="flex grid grid-cols-1 grid-flow-row w-1/2">
             @for (price of totalPrice; track price) {
-               <p class="flex block justify-end mr-2 text-sm text-gray-500 dark:text-gray-400">{{price.price}} {{price.unit}} {{price.priceType}}</p>
+               <p class="flex block justify-end mr-2 text-sm text-gray-500 dark:text-gray-400">{{price.price}} {{price.unit}} {{price.text}}</p>
             } @empty {
                <p class="flex flex-right text-gray-700 dark:text-gray-400 justify-end">0.</p>
             }
